Fixed background on mobile

--- a/src/css/materialize.css
+++ b/src/css/materialize.css
@@ -7931,7 +7931,13 @@ ul.side-nav .collapsible-body li.active, ul.side-nav.fixed .collapsible-body li.
 	}
 	
 @media screen and (max-device-width: 800px) {
-	body { background: url(../vid/poster.jpg) #000 no-repeat center center fixed; }
+	body { 
+		background: url(../vid/poster.jpg) #000 no-repeat center center fixed;
+		-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover;
+	 }
 	#bgvid { display: none; }
 }
 
